--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,6 @@
   <h1>Vijay</h1>
 </center>
 <hr>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam quas placeat nisi iusto iure animi ullam. Quis molestiae accusantium possimus quod officia ipsum! In facere voluptas itaque magnam sequi quas?
+</p>
