Added phone number

--- a/vijay.html
+++ b/vijay.html
@@ -5,3 +5,5 @@
 <p>
   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam quas placeat nisi iusto iure animi ullam. Quis molestiae accusantium possimus quod officia ipsum! In facere voluptas itaque magnam sequi quas?
 </p>
+
+<p>Contact +9828879897</p>
